--- a/StychMate/Stych/templates/signup.html
+++ b/StychMate/Stych/templates/signup.html
@@ -23,7 +23,8 @@
             margin-bottom: 10px;
         }
         input[type="text"],
-        input[type="password"] {
+        input[type="password"],
+        input[type="number"] {
             padding: 10px;
             border-radius: 3px;
             border: 1px solid #ccc;
@@ -58,7 +59,7 @@
         <label for="tailor_location">Tailor Location:</label>
         <input type="text" name="tailor_location" required><br>
         <label for="tailor_availability">Tailor Availability:</label>
-        <input type="number" name="tailor_availability" required><br>
+        <input type="text" name="tailor_availability" required><br>
         <label for="tailor_payout">Tailor Payout:</label>
         <input type="number" name="tailor_payout" required><br>
         <button type="submit">Sign Up</button>
